@@ -123,6 +123,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   plaintext copyright notice. Patch by Juliano F. Ravasi.
 * (bug 15551) Deletion log excerpt is now shown whenever a user vists a 
   deleted page, even if they are unable to edit it.
+* Added Wantedfiles special pages, allowing users to find image links with no image.
 
 === Bug fixes in 1.14 ===
 
